If it works, fixed the blunder of clues being added to dijkstramodule.py results.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 cwdb.txt
+/solving_package/grid_16_03_2023_MiniNYT/clue_solver_results/
+/solving_package/grid_16_03_2023_MiniNYT/solved_candidate_grids/
+/solving_package/grid_18_02_2023_Guardian/clue_solver_results/
+/solving_package/grid_18_02_2023_Guardian/solved_candidate_grids/
+dictionnaire.txt
