Tried with a new grid, with only clues similar to ones in the CWDB

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ cwdb.txt
 /solving_package/grid_18_02_2023_Guardian/clue_solver_results/
 /solving_package/grid_18_02_2023_Guardian/solved_candidate_grids/
 dictionnaire.txt
+/solving_package/grid_20_03_2023_MiniTWP/clue_solver_results/
+/solving_package/grid_20_03_2023_MiniTWP/solved_candidate_grids/
